make store handle
