# server/app/impl/models.py
@@ -3,18 +3,28 @@ from typing import List, Optional
 from pydantic import BaseModel, Field
 
 
-class RecordInput(BaseModel):
-    user_id: int = Field(..., description='ID of the user creating the record')
-    values: List[float] = Field(
-        ..., description='Array of numeric values associated with the record'
+class StoreRequestItem(BaseModel):
+    value: int = Field(
+        None, description='Numeric value associated with the record'
     )
     description: Optional[str] = Field(
         None, description='Optional description for the record'
     )
 
 
+class StoreRequest(BaseModel):
+    user_id: Optional[int] = Field(
+        None, description='ID of the user creating the record'
+    )
+    items: List[StoreRequestItem]
+
+
 class StoreResponse(BaseModel):
     uuids: Optional[List[str]] = Field(None, description='UUIDs of the saved records')
+
+
+class RecordsRequest(BaseModel):
+    user_id: int = Field(..., description='ID of the user')
 
 
 class RecordOutput(BaseModel):
@@ -24,7 +34,7 @@ class RecordOutput(BaseModel):
     )
 
 
-class UserUpdate(BaseModel):
+class UserUpdateRequest(BaseModel):
     user_id: int = Field(..., description='ID of the user to update')
     surname: Optional[str] = Field(None, description='Optional surname of the user')
     name: Optional[str] = Field(None, description='Optional first name of the user')
@@ -36,5 +46,5 @@ class UserInfo(BaseModel):
     name: Optional[str] = Field(None, description="User's first name")
 
 
-class StorePostRequest(BaseModel):
-    __root__: List[RecordInput]
+class UserIdRequest(BaseModel):
+    user_id: int = Field(..., description='ID of the user')
